--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 div {
-  border: 20px solid #000; /* this is short hand for setting 
+  border: 20px solid #000; /* this is short hand for setting
                             the border's width, its type, and color */
   display: inline-block; /* a way of positioning elements */
   min-width: 20em; /* the two min styles make the shape */
@@ -8,4 +8,32 @@ div {
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
+}
+
+#red {
+  border-top-color: #e89794;
+}
+
+#orange {
+  border-top-color: #e8bb94;
+}
+
+#yellow {
+  border-top-color: #e8e294;
+}
+
+#green {
+  border-top-color: #a6e894;
+}
+
+#blue {
+  border-top-color: #94e8e5;
+}
+
+#indigo {
+  border-top-color: #94a4e8;
+}
+
+#purple {
+  border-top-color: #b094e8;
 }
